# protoflow

./: .gitignore  AUTHORS  CHANGES.md  Cargo.toml  Makefile  README.md  examples  rustfmt.toml
lib/protoflow/: Cargo.toml  build.rs
lib/protoflow-blocks/: Cargo.toml
lib/protoflow-blocks/doc/core/: buffer.mmd  buffer.seq.mmd  clock.mmd  clock.seq.mmd  const.mmd  const.seq.mmd  count.mmd  count.seq.mmd  delay.mmd  delay.seq.mmd  drop.mmd  drop.seq.mmd  mapper.mmd  mapper.seq.mmd  random.mmd  random.seq.mmd  random_int.mmd  random_int.seq.mmd
lib/protoflow-blocks/doc/flow/: batch.mmd  batch.seq.mmd  concat.mmd  concat.seq.mmd  distinct.mmd  distinct.seq.mmd  gate.mmd  gate.seq.mmd  map_into.mmd  map_into.seq.mmd  merge.mmd  merge.seq.mmd  replicate.mmd  replicate.seq.mmd  sort.mmd  sort.seq.mmd  split.mmd  split.seq.mmd
lib/protoflow-blocks/doc/hash/: hash.mmd  hash.seq.mmd
lib/protoflow-blocks/doc/io/: decode.mmd  decode.seq.mmd  decode_hex.mmd  decode_hex.seq.mmd  decode_json.mmd  decode_json.seq.mmd  encode.mmd  encode.seq.mmd  encode_hex.mmd  encode_hex.seq.mmd  encode_json.mmd  encode_json.seq.mmd
lib/protoflow-blocks/doc/math/: add.mmd  add.seq.mmd  div.mmd  div.seq.mmd  mul.mmd  mul.seq.mmd  sub.mmd  sub.seq.mmd
lib/protoflow-blocks/doc/sys/: read_dir.mmd  read_dir.seq.mmd  read_env.mmd  read_env.seq.mmd  read_file.mmd  read_file.seq.mmd  read_socket.mmd  read_socket.seq.mmd  read_stdin.mmd  read_stdin.seq.mmd  write_file.mmd  write_file.seq.mmd  write_socket.mmd  write_socket.seq.mmd  write_stderr.mmd  write_stderr.seq.mmd  write_stdout.mmd  write_stdout.seq.mmd
lib/protoflow-blocks/doc/text/: concat_strings.mmd  concat_strings.seq.mmd  decode_csv.mmd  decode_csv.seq.mmd  encode_csv.mmd  encode_csv.seq.mmd  split_string.mmd  split_string.seq.mmd
lib/protoflow-blocks/src/: block_config.rs  block_connections.rs  block_instantiation.rs  block_tag.rs  blocks.rs  config.rs  core.rs  encoding.rs  flow.rs  hash.rs  io.rs  lib.rs  math.rs  stdio.rs  sys.rs  system.rs  text.rs  types.rs
lib/protoflow-blocks/src/blocks/: buffer.rs  const.rs  core.rs  count.rs  delay.rs  drop.rs  flow.rs  hash.rs  io.rs  math.rs  random.rs  sys.rs  text.rs
lib/protoflow-blocks/src/blocks/core/: buffer.rs  clock.rs  const.rs  count.rs  delay.rs  drop.rs  mapper.rs  random.rs  random_int.rs
lib/protoflow-blocks/src/blocks/flow/: batch.rs  concat.rs  distinct.rs  gate.rs  map_into.rs  merge.rs  replicate.rs  sort.rs  split.rs
lib/protoflow-blocks/src/blocks/hash/: hash.rs
lib/protoflow-blocks/src/blocks/io/: decode.rs  decode_hex.rs  decode_json.rs  encode.rs  encode_hex.rs  encode_json.rs
lib/protoflow-blocks/src/blocks/math/: add.rs  div.rs  mul.rs  sub.rs
lib/protoflow-blocks/src/blocks/sys/: read_dir.rs  read_env.rs  read_file.rs  read_socket.rs  read_stdin.rs  write_file.rs  write_socket.rs  write_stderr.rs  write_stdout.rs
lib/protoflow-blocks/src/blocks/text/: decode_csv.rs  (+3 more)
lib/protoflow-blocks/src/core/: buffer.rs  const.rs  count.rs  delay.rs  drop.rs  random.rs
lib/protoflow-blocks/src/hash/: hash.rs
lib/protoflow-blocks/src/io/: decode.rs  encode.rs  encode_hex.rs  read.rs  write.rs
lib/protoflow-blocks/src/sys/: read_dir.rs  read_env.rs  read_file.rs  read_stdin.rs  write_file.rs  write_stderr.rs  write_stdout.rs
lib/protoflow-blocks/src/types/: byte_size.rs  delay_type.rs  encoding.rs  hash_algorithm.rs
lib/protoflow-blocks/tests/: json_roundtrip.rs
lib/protoflow-core/: Cargo.toml
lib/protoflow-core/src/: async_block.rs  block.rs  block_descriptor.rs  block_error.rs  block_runtime.rs  comparable_any.rs  function_block.rs  input_port.rs  input_ports.rs  lib.rs  message.rs  message_buffer.rs  message_receiver.rs  message_sender.rs  output_port.rs  output_ports.rs  parameter_descriptor.rs  port.rs  port_descriptor.rs  port_error.rs  port_id.rs  port_state.rs  prelude.rs  runtime.rs  runtimes.rs  system.rs  transport.rs  transports.rs
lib/protoflow-core/src/runtimes/: std.rs  web.rs
lib/protoflow-core/src/transports/: mock.rs  mpsc.rs
lib/protoflow-core/src/utils/: rw_condvar.rs
lib/protoflow-crossbeam/: Cargo.toml
lib/protoflow-derive/: Cargo.toml
lib/protoflow-derive/src/: derives.rs  lib.rs  meta.rs  util.rs
lib/protoflow-derive/src/derives/: block.rs  function_block.rs  system.rs
lib/protoflow-derive/tests/: function_block.rs
lib/protoflow-flume/: Cargo.toml
lib/protoflow-flume/src/: lib.rs
lib/protoflow-syntax/: Cargo.toml
lib/protoflow-syntax/src/: analysis_error.rs  codegen.rs  lib.rs  system_parser.rs
lib/protoflow-zeromq/: Cargo.toml  build.rs
lib/protoflow-zeromq/src/: event.rs  input_port.rs  lib.rs  output_port.rs  protoflow.zmq.rs  socket.rs  transport_event.proto
lib/protoflow/examples/async/: main.rs
lib/protoflow/examples/count_lines/: README.md  main.rs
lib/protoflow/examples/csv_processing/: README.md  main.rs
lib/protoflow/examples/decode_hex/: README.md  main.rs
lib/protoflow/examples/delay_output/: README.md  main.rs
lib/protoflow/examples/echo_lines/: README.md  main.rs
lib/protoflow/examples/encode_hex/: README.md  main.rs
lib/protoflow/examples/json_processing/: README.md  main.rs
lib/protoflow/examples/process_env_var/: README.md  main.rs
lib/protoflow/examples/read_file/: README.md  main.rs
lib/protoflow/examples/write_file/: README.md  main.rs
lib/protoflow/src/: block.rs  block_descriptor.rs  block_error.rs  block_runtime.rs  blocks.rs  exit.rs  feature.rs  input_port.rs  lib.rs  main.rs  message.rs  message_buffer.rs  output_port.rs  port.rs  port_descriptor.rs  port_error.rs  port_id.rs  port_state.rs  prelude.rs  process.rs  runtime.rs  runtimes.rs  scheduler.rs  sysexits.rs  system.rs  transport.rs  transports.rs
lib/protoflow/src/blocks/: buffer.rs  const.rs  count.rs  delay.rs  drop.rs  mod.rs  random.rs
lib/protoflow/src/commands/: check.rs  config.rs  execute.rs  generate.rs
lib/protoflow/src/runtimes/: mod.rs  std.rs  std_thread.rs  tokio.rs  web.rs
lib/protoflow/src/transports/: flume.rs  mock.rs  mpsc.rs  zeromq.rs
lib/protoflow/tests/: mpsc.rs  zst.rs
(+17 files in other folders)
