# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*"]
default-members = ["lib/*"]
resolver = "2"

[workspace.package]
version = "0.0.13"
authors = ["Arto Bendiken"]
edition = "2021"
rust-version = "1.70"
description = "Protoflow"
#documentation = "https://docs.rs/protoflow/"
readme = true
homepage = "https://protoflow.rs"
repository = "https://github.com/AsimovPlatform/protoflow"
license = "Unlicense"
keywords = ["protoflow", "protobuf", "flow", "fbp"]
categories = ["concurrency", "network-programming", "no-std"]
publish = true

[workspace.dependencies]
cfg_aliases = "0.2"
protoflow = { path = "lib/protoflow" }
protoflow-blocks = { path = "lib/protoflow-blocks" }
protoflow-core = { path = "lib/protoflow-core" }
protoflow-crossbeam = { path = "lib/protoflow-crossbeam" }
protoflow-derive = { path = "lib/protoflow-derive" }
protoflow-flume = { path = "lib/protoflow-flume" }
protoflow-syntax = { path = "lib/protoflow-syntax" }
protoflow-zeromq = { path = "lib/protoflow-zeromq" }

[patch.crates-io]
protoflow = { path = "lib/protoflow" }
protoflow-blocks = { path = "lib/protoflow-blocks" }
protoflow-core = { path = "lib/protoflow-core" }
protoflow-crossbeam = { path = "lib/protoflow-crossbeam" }
protoflow-derive = { path = "lib/protoflow-derive" }
protoflow-flume = { path = "lib/protoflow-flume" }
protoflow-syntax = { path = "lib/protoflow-syntax" }
protoflow-zeromq = { path = "lib/protoflow-zeromq" }
