# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*"]
default-members = ["lib/*"]
resolver = "2"

[workspace.package]
version = "0.4.3"
authors = ["Arto Bendiken"]
edition = "2021"
rust-version = "1.70"
description = "Protoflow implements flow-based programming (FBP) for Rust using Protocol Buffers messages."
#documentation = "https://docs.rs/protoflow/"
readme = true
homepage = "https://protoflow.rs"
repository = "https://github.com/AsimovPlatform/protoflow"
license = "Unlicense"
keywords = ["protoflow", "protobuf", "flow", "fbp"]
categories = ["concurrency", "network-programming", "no-std"]
publish = true

[workspace.dependencies]
cfg_aliases = "0.2"
protoflow = { version = "=0.4.3", default-features = false }
protoflow-blocks = { version = "=0.4.3", default-features = false }
protoflow-core = { version = "=0.4.3", default-features = false }
protoflow-crossbeam = { version = "=0.4.3", default-features = false }
protoflow-derive = { version = "=0.4.3", default-features = false }
protoflow-flume = { version = "=0.4.3", default-features = false }
protoflow-syntax = { version = "=0.4.3", default-features = false }
protoflow-zeromq = { version = "=0.4.3", default-features = false }
shadow-rs = { version = "0.26", features = ["tzdb"], default-features = false }

[patch.crates-io]
protoflow = { path = "lib/protoflow" }
protoflow-blocks = { path = "lib/protoflow-blocks" }
protoflow-core = { path = "lib/protoflow-core" }
protoflow-crossbeam = { path = "lib/protoflow-crossbeam" }
protoflow-derive = { path = "lib/protoflow-derive" }
protoflow-flume = { path = "lib/protoflow-flume" }
protoflow-syntax = { path = "lib/protoflow-syntax" }
protoflow-zeromq = { path = "lib/protoflow-zeromq" }
