[package]
name = "protoflow-blocks"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["hash", "rand", "serde", "sysml", "tracing"]
hash = ["dep:blake3", "dep:sha2", "dep:sha1", "dep:md-5"]
rand = ["protoflow-core/rand"]
std = [
    "blake3?/std",
    "protoflow-core/std",
    "serde?/std",
    "sysml-model?/std",
    "tracing?/std",
]
serde = [
    "duration-str/serde",
    "protoflow-core/serde",
    "ubyte/serde",
    "dep:serde",
    "dep:serde_yml",
]
sysml = ["protoflow-core/sysml", "dep:sysml-model"]
tokio = ["protoflow-core/tokio", "dep:tokio"]
tracing = ["protoflow-core/tracing", "dep:tracing"]
unstable = ["protoflow-core/unstable", "protoflow-derive/unstable"]

[build-dependencies]
cfg_aliases.workspace = true

[dependencies]
blake3 = { version = "1.5", default-features = false, optional = true }
sha2 = { version = "0.10.8", default-features = false, optional = true }
sha1 = { version = "0.10.6", default-features = false, optional = true }
md-5 = { version = "0.10.6", default-features = false, optional = true }
duration-str = { version = "0.11", default-features = false }
enum-iterator = "2.1"
protoflow-core.workspace = true
protoflow-derive.workspace = true
tokio = { version = "1.40.0", default-features = false, optional = true }
tracing = { version = "0.1", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, features = [
    "derive",
], optional = true }
serde_yml = { version = "0.0.12", optional = true }
simple-mermaid = "0.1"
stability = "0.2"
struson = "0.5"
sysml-model = { version = "=0.2.3", default-features = false, optional = true }
ubyte = { version = "0.10", default-features = false }

[dev-dependencies]
bytes = "1.8.0"
protoflow-derive.workspace = true
tempfile = "3.13.0"
