[package]
name = "protoflow-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["std", "sysml", "tracing"]
rand = ["dep:getrandom", "dep:rand"] # FIXME: , "rand/getrandom"]
std = [
    "futures/std",
    "getrandom?/std",
    "prost/std",
    "prost-types/std",
    "rand?/std",
    "rand?/std_rng",
    "sysml-model?/std",
    "tracing?/std",
]
sysml = ["dep:sysml-model"]
tracing = ["dep:tracing"]

[build-dependencies]
cfg_aliases.workspace = true

[dependencies]
bytes = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false }
getrandom = { version = "0.2", optional = true, default-features = false }
parking_lot = "0.12"
prost = { version = "0.13", default-features = false, features = ["derive"] }
prost-types = { version = "0.13", default-features = false }
rand = { version = "0.8", optional = true, default-features = false }
sysml-model = { version = "=0.1.1", default-features = false, optional = true }
tracing = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
