[package]
name = "protoflow-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["serde", "sysml", "tracing"]
rand = ["dep:getrandom", "dep:rand"] # FIXME: , "rand/getrandom"]
serde = ["dep:serde"]
std = [
    "dogma/std",
    "getrandom?/std",
    "prost/std",
    "prost-types/std",
    "rand?/std",
    "rand?/std_rng",
    "serde?/std",
    "sysml-model?/std",
    "tracing?/std",
]
sysml = ["dep:sysml-model"]
tokio = ["dep:tokio", "dep:async-trait"]
tracing = ["dep:tracing"]
unstable = []

[build-dependencies]
cfg_aliases.workspace = true

[dependencies]
bytes = { version = "1", default-features = false }
dogma = { version = "0.1", default-features = false }
getrandom = { version = "0.2", optional = true, default-features = false }
parking_lot = "0.12"
prost = { version = "0.13", default-features = false, features = ["derive"] }
prost-types = { version = "0.13", default-features = false }
rand = { version = "0.8", optional = true, default-features = false }
serde = { version = "1.0", default-features = false, features = [
    "derive",
], optional = true }
sharded-slab = "0.1.7"
stability = "0.2"
sysml-model = { version = "=0.2.3", default-features = false, optional = true }
tokio = { version = "1.40.0", default-features = false, optional = true }
async-trait = { version = "0.1.83", optional = true }
tracing = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
