[package]
name = "protoflow-crossbeam"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["tracing"]
std = ["crossbeam/std", "protoflow-core/std", "tracing?/std"]
tracing = ["protoflow-core/tracing", "dep:tracing"]
unstable = ["protoflow-core/unstable"]

[build-dependencies]
cfg_aliases.workspace = true

[dependencies]
crossbeam = { version = "0.8", default-features = false }
protoflow-core = { version = "=0.2.2", default-features = false }
tracing = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
