[package]
name = "protoflow-flume"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["std", "tracing"]
std = ["protoflow-core/std", "tracing?/std"]
tracing = ["dep:tracing"]

[build-dependencies]
cfg_aliases.workspace = true

[dependencies]
flume = { version = "0.11", default-features = false }
protoflow-core = { version = "=0.0.12", default-features = false }
tracing = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
