[package]
name = "protoflow-syntax"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["std", "sysml", "tracing"]
std = [
    "protoflow-blocks/std",
    "protoflow-core/std",
    "sysml-model?/std",
    "sysml-parser?/std",
    "tracing?/std",
]
sysml = [
    "dep:sysml-model",
    "dep:sysml-parser",
    "protoflow-blocks/sysml",
    "protoflow-core/sysml",
]
tracing = [
    "dep:tracing",
    "protoflow-blocks/tracing",
    "protoflow-core/tracing",
    "sysml-parser?/tracing",
]

[build-dependencies]
cfg_aliases.workspace = true

[dependencies]
displaydoc = { version = "0.2", default-features = false }
error-stack = { version = "0.5", default-features = false }
prettyplease = "0.2"
proc-macro2 = { version = "1", default-features = false }
protoflow-blocks = { version = "=0.2.1", default-features = false, features = [
    "hash",
] }
protoflow-core = { version = "=0.2.1", default-features = false }
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = true }
sysml-model = { version = "=0.2.1", default-features = false, optional = true }
sysml-parser = { version = "=0.2.1", default-features = false, features = [
    "error-stack",
], optional = true }
tracing = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
