[package]
name = "protoflow-syntax"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["sysml", "tracing"]
std = [
    "protoflow-blocks/std",
    "protoflow-core/std",
    "sysml-model?/std",
    "sysml-parser?/std",
    "tracing?/std",
]
sysml = [
    "protoflow-blocks/sysml",
    "protoflow-core/sysml",
    "dep:sysml-model",
    "dep:sysml-parser",
]
tracing = [
    "protoflow-blocks/tracing",
    "protoflow-core/tracing",
    "sysml-parser?/tracing",
    "dep:tracing",
]
unstable = ["protoflow-blocks/unstable", "protoflow-core/unstable"]

[build-dependencies]
cfg_aliases.workspace = true

[dependencies]
displaydoc = { version = "0.2", default-features = false }
error-stack = { version = "0.5", default-features = false }
prettyplease = "0.2"
proc-macro2 = { version = "1", default-features = false }
protoflow-blocks.workspace = true
protoflow-core.workspace = true
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = true }
sysml-model = { version = "=0.2.3", default-features = false, optional = true }
sysml-parser = { version = "=0.2.3", default-features = false, features = [
    "error-stack",
], optional = true }
tracing = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
