[package]
name = "protoflow-zeromq"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["tracing"]
std = ["protoflow-core/std", "tracing?/std", "zeromq/default"]
tracing = ["protoflow-core/tracing", "dep:tracing"]
unstable = ["protoflow-core/unstable"]

[build-dependencies]
cfg_aliases.workspace = true

[dependencies]
protoflow-core = { version = "=0.3.0", default-features = false }
tracing = { version = "0.1", default-features = false, optional = true }
zeromq = { version = "0.4", default-features = false }

[dev-dependencies]
