[package]
name = "protoflow-zeromq"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["tracing"]
std = ["protoflow-core/std", "tracing?/std"]
tracing = ["protoflow-core/tracing", "dep:tracing"]
unstable = ["protoflow-core/unstable"]

[build-dependencies]
cfg_aliases.workspace = true
prost-build = "0.13.2"

[dependencies]
protoflow-core.workspace = true
tracing = { version = "0.1", default-features = false, optional = true }
zeromq = { version = "0.4.1", default-features = false, features = [
	"tokio-runtime",
	"all-transport",
] }
tokio = { version = "1.40.0", default-features = false }
prost = "0.13.2"
prost-types = "0.13.2"

[dev-dependencies]
futures-util = "0.3.31"
tracing-subscriber = "0.3.19"
