[package]
name = "protoflow"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
blocks = ["dep:protoflow-blocks"]
cli = [
    "dep:argfile",
    "dep:bytesize",
    "dep:clap",
    "dep:dirs",
    "dep:dotenvy",
    "dep:wild",
]
crossbeam = ["dep:protoflow-crossbeam"]
default = [
    "blocks",
    "cli",
    "derive",
    "rand",
    "std",
    "syntax",
    "sysml",
    "tracing",
]
derive = ["dep:protoflow-derive"]
flume = ["dep:protoflow-flume"]
rand = ["protoflow-blocks?/rand", "protoflow-core/rand"]
std = [
    "protoflow-blocks?/std",
    "protoflow-core/std",
    "protoflow-crossbeam?/std",
    "protoflow-derive?/std",
    "protoflow-flume?/std",
    "protoflow-syntax?/std",
    "protoflow-zeromq?/std",
    "tracing?/std",
]
syntax = ["dep:protoflow-syntax"]
sysml = ["protoflow-core/sysml", "protoflow-derive?/sysml"]
tokio = []
tracing = ["dep:tracing"]
web = []
zeromq = ["dep:protoflow-zeromq"]

[build-dependencies]
cfg_aliases.workspace = true

[dependencies]
argfile = { version = "0.2", optional = true }
bytesize = { version = "1.3", optional = true }
clap = { version = "4.5.13", features = [
    "derive",
    "unicode",
    "wrap_help",
], optional = true }
dirs = { version = "5.0", optional = true }
dotenvy = { version = "0.15", optional = true }
protoflow-blocks = { version = "=0.0.11", default-features = false, optional = true }
protoflow-core = { version = "=0.0.11", default-features = false }
protoflow-crossbeam = { version = "=0.0.11", default-features = false, optional = true }
protoflow-derive = { version = "=0.0.11", optional = true }
protoflow-flume = { version = "=0.0.11", default-features = false, optional = true }
protoflow-syntax = { version = "=0.0.11", default-features = false, optional = true }
protoflow-zeromq = { version = "=0.0.11", default-features = false, optional = true }
tracing = { version = "0.1", default-features = false, optional = true }
wild = { version = "2", optional = true }

[dev-dependencies]

[[bin]]
name = "protoflow"
required-features = ["cli"]
