# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "protoflow"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "cli", "std"]
all = ["blocks", "derive", "rand", "syntax", "sysml", "tracing"]
beta = []
blocks = ["dep:protoflow-blocks"]
cli = ["std", "syntax", "dep:clap", "dep:clientele"]
crossbeam = ["dep:protoflow-crossbeam"]
derive = ["dep:protoflow-derive"]
flume = ["dep:protoflow-flume"]
rand = ["protoflow-blocks?/rand", "protoflow-core/rand"]
std = [
    "clientele?/std",
    "protoflow-blocks?/std",
    "protoflow-core/std",
    "protoflow-crossbeam?/std",
    "protoflow-derive?/std",
    "protoflow-flume?/std",
    "protoflow-syntax?/std",
    "protoflow-zeromq?/std",
    "tracing?/std",
]
syntax = ["dep:protoflow-syntax"]
sysml = [
    "protoflow-blocks?/sysml",
    "protoflow-core/sysml",
    "protoflow-derive?/sysml",
    "protoflow-syntax?/sysml",
]
tokio = []
tracing = ["dep:tracing", "clientele?/tracing"] # FIXME
web = []
zeromq = ["dep:protoflow-zeromq"]

[build-dependencies]
cfg_aliases.workspace = true
shadow-rs.workspace = true

[dependencies]
clap = { version = "4.5", default-features = false, optional = true }
clientele = { version = "=0.1.3", default-features = false, features = [
    "argfile",
    "clap",
    "color",
    "dirs",
    "dotenv",
    "parse",
    "unicode",
    "wild",
], optional = true }
error-stack = { version = "0.5", default-features = false }
protoflow-blocks = { version = "=0.2.1", default-features = false, optional = true }
protoflow-core = { version = "=0.2.1", default-features = false }
protoflow-crossbeam = { version = "=0.2.1", default-features = false, optional = true }
protoflow-derive = { version = "=0.2.1", optional = true }
protoflow-flume = { version = "=0.2.1", default-features = false, optional = true }
protoflow-syntax = { version = "=0.2.1", default-features = false, optional = true }
protoflow-zeromq = { version = "=0.2.1", default-features = false, optional = true }
tracing = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]

[[bin]]
name = "protoflow"
required-features = ["cli"]
